* Refactored the NightLabs-RWLock to be in a separate project: org.nightlabs.concurrent * Refactored the NightLabs-XML-Config to be in a separate project: org.nightlabs.config * New DataNucleus (1.1.3) in client-side (for font-registry). * Fixed a few bugs in the font-registry.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@14633 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.project
+++ b/.project
@@ -11,6 +11,8 @@
 		<project>org.nightlabs.query</project>
 		<project>org.nightlabs.clientui</project>
 		<project>org.nightlabs.base</project>
+		<project>org.nightlabs.config</project>
+		<project>org.nightlabs.concurrent</project>
 		<project>JFireBasePublicBean</project>
 		<project>JFireBaseBean</project>
 		<project>JFireBaseClientLib</project>
