A lot of changes concerning remote class loading project structures and dependencies. Unfortunately, I have to check-in a non-working client. Application start failes with ClassNotFoundException. Sorry, I hope I can fix it, soon
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@14639 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.project
+++ b/.project
@@ -17,8 +17,8 @@
 		<project>JFireBaseBean</project>
 		<project>JFireBaseClientLib</project>
 		<project>JFireRCLBackendBean</project>
-		<project>JFireRCLBackend</project>
 		<project>JFireBaseDAO</project>
+		<project>org.nightlabs.jfire.classloader.remote.backend</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
