some smaller refinements
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@14692 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -24,6 +24,15 @@
 	</servlet-mapping>
 
 	<servlet>
+		<servlet-name>LogoutServlet</servlet-name>
+		<servlet-class>org.nightlabs.jfire.web.admin.servlet.LogoutServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LogoutServlet</servlet-name>
+		<url-pattern>/logout</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
 		<servlet-name>OverviewServlet</servlet-name>
 		<servlet-class>org.nightlabs.jfire.web.admin.servlet.OverviewServlet</servlet-class>
 	</servlet>
