* Moved EAR-Schema-Version into EAR. * Dropped EAR-Module-Version. * Removed Class-Path in MANIFEST.MF (causes weird compiler errors like "Compiler missing implementation" and the error markers are hard to remove).
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireServerManager@15067 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.query.jdo"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.concurrent"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.config"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.jfire.classloader.remote.backend"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
