--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,6 @@
 	<classpathentry kind="con" path="org.nightlabs.eclipse.sdk.jdo.JDO_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/junit-4.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/junit-4.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
