--- a/.project
+++ b/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>JFireIntegrationJBoss</project>
+		<project>org.nightlabs.unifiedjndi.jboss.client</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
