fixed Server setup (could not save protocol2InitalContextURl map) now 2 additional setters and getters for each protocol are existing in ServerCf
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@15243 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -6,7 +6,11 @@ Server.property.parentConfigModule.hidden=true
 Server.property.serverID.orderHint=1
 Server.property.serverName.orderHint=2
 Server.property.j2eeServerType.orderHint=3
-Server.property.initialContextURL.orderHint=4
+#Server.property.initialContextURL.orderHint=4
+Server.property.initialContextURL_HTTPS.orderHint=4
+Server.property.initialContextURL_JNP.orderHint=5
+Server.property.initialContextURL.hidden=true
+Server.property.protocol2initialContextURL.hidden=true
 
 org.nightlabs.jfire.servermanager.config.J2eeCf=JEE
 JEE.property.parentConfigModule.hidden=true
