--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
@@ -10,8 +10,13 @@ Server.property.serverName.displayName=Server Name
 Server.property.serverName.shortDescription=The server display name
 Server.property.j2eeServerType.displayName=Server Type
 Server.property.j2eeServerType.shortDescription=No change needed
-Server.property.initialContextURL.displayName=Initial Context URL
-Server.property.initialContextURL.shortDescription=No change needed
+#Server.property.initialContextURL.displayName=Initial Context URL
+#Server.property.initialContextURL.shortDescription=No change needed
+Server.property.initialContextURL_HTTPS.displayName=Initial Context URL (HTTPS)
+Server.property.initialContextURL_HTTPS.shortDescription=No change needed
+Server.property.initialContextURL_JNP.displayName=Initial Context URL (JNP)
+Server.property.initialContextURL_JNP.shortDescription=No change needed
+
 
 JEE.displayName=JEE Settings
 JEE.property.j2eeDeployBaseDirectory.displayName=Deploy Base Directory
