* Reverted Daniel's changes since they break the configuration XML files, a Map has many advantages and the bean serialisation didn't work properly. * Extended the generic beanedit-UI to support Map fields (so far only Map<String, String> - and only changing values is supported).
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@15254 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
@@ -10,13 +10,10 @@ Server.property.serverName.displayName=Server Name
 Server.property.serverName.shortDescription=The server display name
 Server.property.j2eeServerType.displayName=Server Type
 Server.property.j2eeServerType.shortDescription=No change needed
-#Server.property.initialContextURL.displayName=Initial Context URL
-#Server.property.initialContextURL.shortDescription=No change needed
-Server.property.initialContextURL_HTTPS.displayName=Initial Context URL (HTTPS)
-Server.property.initialContextURL_HTTPS.shortDescription=No change needed
-Server.property.initialContextURL_JNP.displayName=Initial Context URL (JNP)
-Server.property.initialContextURL_JNP.shortDescription=No change needed
-
+Server.property.protocol2initialContextURL.displayName=Initial context URL
+Server.property.protocol2initialContextURL.shortDescription=Leave unchanged or replace "localhost" by your server's real host name
+Server.property.dataCentreID.displayName=Data centre ID
+Server.property.dataCentreID.shortDescription=No change needed
 
 JEE.displayName=JEE Settings
 JEE.property.j2eeDeployBaseDirectory.displayName=Deploy Base Directory
@@ -82,13 +79,13 @@ Smtp.property.mailFrom.displayName=Sender Address
 
 RootOrganisation.displayName=Root Organisation Configuration
 RootOrganisation.shortDescription=A root-organisation is only necessary, if you plan to setup a network with multiple organisations. For a test-system, it's seldom required. Therefore it's recommended not to change anything here. 
-RootOrganisation.property.organisationID.displayName=Organisation Id
+RootOrganisation.property.organisationID.displayName=Organisation ID
 RootOrganisation.property.organisationID.shortDescription=Keep empty to set-up a stand-alone system
-RootOrganisation.property.organisationName.displayName=Organisation Name
-RootOrganisation.property.serverID.displayName=Server Id
-RootOrganisation.property.serverName.displayName=Server Name
-RootOrganisation.property.j2eeServerType.displayName=Server Type
-RootOrganisation.property.initialContextURL.displayName=Initial Context URL
+RootOrganisation.property.organisationName.displayName=Organisation name
+RootOrganisation.property.serverID.displayName=Server ID
+RootOrganisation.property.serverName.displayName=Server name
+RootOrganisation.property.j2eeServerType.displayName=Server type
+RootOrganisation.property.protocol2initialContextURL.displayName=Initial context URL
 
 FirstOrganisation.displayName=First Local Organisation
 FirstOrganisation.property.organisationID.displayName=Organisation Id
