--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -2,15 +2,16 @@ org.nightlabs.jfire.web.admin.serverinit.PresetsBean=Presets
 Presets.property.presets.values=jboss_derby,jboss_mysql
 
 org.nightlabs.jfire.servermanager.config.ServerCf=Server
-Server.property.parentConfigModule.hidden=true
+# I think there is no such property - thus I commented out 'parentConfigModule'. Marco. 
+#Server.property.parentConfigModule.hidden=true
 Server.property.serverID.orderHint=1
 Server.property.serverName.orderHint=2
 Server.property.j2eeServerType.orderHint=3
 #Server.property.initialContextURL.orderHint=4
-Server.property.initialContextURL_HTTPS.orderHint=4
-Server.property.initialContextURL_JNP.orderHint=5
 Server.property.initialContextURL.hidden=true
-Server.property.protocol2initialContextURL.hidden=true
+Server.property.protocol2initialContextURL.mapKeyType=java.lang.String
+Server.property.protocol2initialContextURL.mapValueType=java.lang.String
+Server.property.protocol2initialContextURL.orderHint=4
 
 org.nightlabs.jfire.servermanager.config.J2eeCf=JEE
 JEE.property.parentConfigModule.hidden=true
@@ -69,7 +70,9 @@ RootOrganisation.property.organisationName.orderHint=2
 RootOrganisation.property.serverID.orderHint=3
 RootOrganisation.property.serverName.orderHint=4
 RootOrganisation.property.j2eeServerType.orderHint=5
-RootOrganisation.property.initialContextURL.orderHint=6
+RootOrganisation.property.protocol2initialContextURL.mapKeyType=java.lang.String
+RootOrganisation.property.protocol2initialContextURL.mapValueType=java.lang.String
+RootOrganisation.property.protocol2initialContextURL.orderHint=6
 
 
 org.nightlabs.jfire.web.admin.serverinit.FirstOrganisationBean=FirstOrganisation
