--- a/src/org/nightlabs/jfire/web/admin/beaninfo/serverconfigbeaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/serverconfigbeaninfo.properties
@@ -1,3 +1,3 @@
-## This file is not used or taken into account add all entries into beaninfo.properties
+## these values are loaded additionally for the server config bean editor
 
-#Server.property.serverID.hidden=true
+Server.property.serverID.hidden=true
