JFireIntegrationJBoss:  - updated the web.xml of http-invoker.sar to expose the remote invocation servlets  - updated the jboss-service.xml of http-invoker.sar to define the JBossRemoting connectors needed to handle the remote method invocation.  - removed the obsolete HttpsLoginInitalContextFactory
JFireServerManager:
 - updated the development certificate to include the "testing.jfire.org" dns alias so that remote connections can easily be tested without having to create a new certificate.

git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireServerManager@15311 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/localhost_cer.cnf
+++ b/src/localhost_cer.cnf
@@ -51,7 +51,7 @@ nsCertType=server
 nsCertType=server
 
 # AltNames for local server
-subjectAltName=IP:127.0.0.1,DNS:localhost
+subjectAltName=IP:127.0.0.1,DNS:localhost,DNS:testing.jfire.org
 
 # Extensions for a typical CA
 
