--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-4.3.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireTrade"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
