- separated The string substitution from the login functionality in the UnifiedJndiContext and the UnifiedLoginContext  - updated the ServerCf accordingly
ServerConfiguratorJBoss
 - copies default truststore to config/jfire-server.truststore
 - sets the environment vars for JSSE to recognise the truststore

git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@15359 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -44,7 +44,7 @@ JDO.property.jdoDeploymentDescriptorTemplateFile.orderHint=3
 JDO.property.jdoPersistenceConfigurationFile.orderHint=4
 JDO.property.jdoPersistenceConfigurationTemplateFile.orderHint=5
 
-org.nightlabs.jfire.servermanager.config.ServletSSLCf=ServletSSL
+org.nightlabs.jfire.servermanager.config.SslCf=Ssl
 ServletSSL.property.parentConfigModule.hidden=true
 ServletSSL.property.servletBaseURL.orderHint=1
 ServletSSL.property.servletBaseURLHttps.orderHint=2
