--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -45,13 +45,13 @@ JDO.property.jdoPersistenceConfigurationFile.orderHint=4
 JDO.property.jdoPersistenceConfigurationTemplateFile.orderHint=5
 
 org.nightlabs.jfire.servermanager.config.SslCf=Ssl
-ServletSSL.property.parentConfigModule.hidden=true
-ServletSSL.property.servletBaseURL.orderHint=1
-ServletSSL.property.servletBaseURLHttps.orderHint=2
-ServletSSL.property.keystoreURLToImport.orderHint=3
-ServletSSL.property.keystorePassword.orderHint=4
-ServletSSL.property.sslServerCertificateAlias.orderHint=5
-ServletSSL.property.sslServerCertificatePassword.orderHint=6
+Ssl.property.parentConfigModule.hidden=true
+Ssl.property.servletBaseURL.orderHint=1
+Ssl.property.servletBaseURLHttps.orderHint=2
+Ssl.property.keystoreURLToImport.orderHint=3
+Ssl.property.keystorePassword.orderHint=4
+Ssl.property.sslServerCertificateAlias.orderHint=5
+Ssl.property.sslServerCertificatePassword.orderHint=6
 
 org.nightlabs.jfire.servermanager.config.SmtpMailServiceCf=Smtp
 Smtp.property.parentConfigModule.hidden=true
