--- a/EarContent/jfireTestSuite.properties
+++ b/EarContent/jfireTestSuite.properties
@@ -1,37 +1,28 @@
-## This is the main properties file controlling the JFire Test Suite. It is expected in the
-## directory ${deploy}/JFire.last/JFireTestSuite.ear/ of your JBoss server.
+## This is the main properties file controlling the JFire Test Suite. It is 
+## expected in the directory ${deploy}/JFire.last/JFireTestSuite.ear/ of your
+## JBoss server.
 ##
-## This file supports include files. Include files can include other include files. An include
-## file overrides the settings made in the file which declares the include. That's why you are
-## encouraged, not to change this file but instead create e.g. the include file in your user
-## home directory declared by the include below.
+## If you want personal settings, you have two possibilities:
+## - Set the system property 'org.nightlabs.jfire.testsuite.config' to an 
+##   absolute path of a properties file
+## - Create a file called 'jfireTestSuite.properties' in your user home
+##   directory.
 ##
-## In order to define an include file, you declare a property with the prefix "include.". You
-## can add whatever you want as suffix. The include directives are processed in alphabetic order
-## of the include property keys (e.g. "include.0" would be processed before "include.1").
-##
-## If an include file defines further include files, they will be read first before stepping up
-## again in the recursion (i.e. a recursion-sub-branch is processed completely before the sibling).
-##
-## The value of an include directive - i.e. the include file you declare - can contain system
-## properties. They are enclosed in "${" and "}". For example, if you want to read the file
-## "myfile.properties" in your home directory, you'd declare "${user.home}/myfile.properties".
-##
-## If an include file does not exist, it is not a blocking error; only a simple INFO message will
-## be logged!
-
-## If you want personal settings, you are encouraged to create the following file in your home directory
-## rather than changing this file!
+## All files are combined in the following order -- later properties override
+## earlier properties:
+## 1. The default file in the EAR
+## 2. The file in user home
+## 3. The file specified by the system property
 ##
 ## Your home directory should be sth. like this:
 ##   * Windows: C:\Documents and settings\YOUR_USER_NAME
 ##   * GNU/Linux: /home/YOUR_USER_NAME
 ##   * Mac: /Users/YOUR_USER_NAME
 ##
-include.userhome=${user.home}/.jfireTestSuite.properties
 
-## You can define multiple listeners by using the "listener." prefix, followed by the name of the listener
-## and then adding the configuration key as suffix. For example, you can declare 2 listeners
+## You can define multiple listeners by using the "listener." prefix, 
+## followed by the name of the listener and then adding the configuration 
+## key as suffix. For example, you can declare 2 listeners
 ## like this:
 ##   listener.myFirst.class=my.package.MyListener1
 ##   listener.myFirst.another.key=whatever_value
@@ -41,15 +32,37 @@ include.userhome=${user.home}/.jfireTestSuite.properties
 ######
 ## BEGIN configuration for "Default" listener.
 
+# The implementation class
 listener.Default.class=org.nightlabs.jfire.testsuite.DefaultTestListener
-listener.Default.xmlReport.enabled=true
-listener.Default.htmlReport.enabled=true
+
+# Enable report files
+listener.Default.report.enabled=true
+
+# Override this property to create reports in the specified directory
+# If not specified, a temporary directory will be used
+#listener.Default.report.todir=
+
+# Override this property to create reports files with the specified prefix
+# If not specified, a random prefix will be used
+#listener.Default.report.filenameprefix=
+
+# A comma separated list of stylesheet identifiers
+listener.Default.report.stylesheets=html
+
+# The specific stylesheet XSLT location
+listener.Default.report.stylesheet.html.location=internal:htmlReport.xsl
+
+# The specific stylesheet file suffix (default: .xml)
+listener.Default.report.stylesheet.html.filesuffix=.html
+
+# The mail stylesheet identifier. If not set, the default HTML
+# stylesheet will be used
+#listener.Default.mail.stylesheet=
 
 ## For all mail.* properties, please consult the documentation:
 ## http://java.sun.com/products/javamail/javadocs/com/sun/mail/smtp/package-summary.html
 
-## who ever wants to get some test stats should create an include file with the following properties
-## (alternatively you could change the following lines, but an include file is recommended).
+## who ever wants to get some test stats should create a configuration file with the following properties
 listener.Default.mail.alwaysSend.enabled=false
 listener.Default.mail.onFailure.enabled=false
 listener.Default.mail.onSkip.enabled=false
