- settings - testability - Ant junitreport style stylesheet
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireTestSuiteEAR@15945 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/EarContent/jfireTestSuite.properties
+++ b/EarContent/jfireTestSuite.properties
@@ -35,8 +35,8 @@
 # The implementation class
 listener.Default.class=org.nightlabs.jfire.testsuite.DefaultTestListener
 
-# Enable report files
-listener.Default.report.enabled=true
+# Enable report files (default: true)
+#listener.Default.report.enabled=true
 
 # Override this property to create reports in the specified directory
 # If not specified, a temporary directory will be used
@@ -82,10 +82,6 @@ listener.Default.mail.to=
 
 ## The subject to be used?
 listener.Default.mail.subject=JFire Server Test Report
-
-## The XSL used to generate the HTML file to be sent? If not assigned or empty, the internal htmlReport.xsl will be used.
-#listener.Default.mail.htmlReportXSL=/home/meMyselfAndI/myHtmlReport.xsl
-
 
 ## In case you have to authenticate at your SMTP server, you might find the following
 ## settings useful. 
