NightLabsXStreamEAR does not use NightLabsXStream any more. It now uses the OSGI bundles com.thoughtworks.xstream and org.xmlpull
git-svn-id: https://svn.jfire.org/svn/main/trunk/NightLabsXStreamEAR@16753 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.project
+++ b/.project
@@ -3,8 +3,9 @@
 	<name>NightLabsXStreamEAR</name>
 	<comment></comment>
 	<projects>
-		<project>NightLabsXStream</project>
 		<project>NightLabsXStreamEAR</project>
+		<project>com.thoughtworks.xstream</project>
+		<project>org.xmlpull</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
