a new bean field property is added ( isPasswordField ) to mark some fields as Password field, changes has been made to the JSP page to show a password field wherever the property is set to true. solved issue https://www.jfire.org/modules/bugs/view.php?id=1500
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@16865 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
@@ -38,6 +38,7 @@ Database.property.databaseSuffix.displayName=Database Name Suffix
 Database.property.databaseSuffix.shortDescription=No change needed
 Database.property.databaseUserName.displayName=Database User Name
 Database.property.databasePassword.displayName=Database Password
+Database.property.databasePassword.isPasswordField=true
 Database.property.databaseAdapter.displayName=Database Adapter
 Database.property.databaseAdapter.shortDescription=No change needed
 Database.property.datasourceMetadataTypeMapping.displayName=Data Source Meta Data Type Mapping
@@ -74,6 +75,7 @@ Smtp.property.port.displayName=Port
 Smtp.property.useAuthentication.displayName=Use Authentication
 Smtp.property.username.displayName=Username
 Smtp.property.password.displayName=Password
+Smtp.property.password.isPasswordField=true
 Smtp.property.encryptionMethod.displayName=Encryption Method
 Smtp.property.mailFrom.displayName=Sender Address
 
@@ -93,4 +95,4 @@ FirstOrganisation.property.organisationID.shortDescription=Keep empty to not cre
 FirstOrganisation.property.organisationName.displayName=Organisation Name
 FirstOrganisation.property.adminUserName.displayName=Admin Username
 FirstOrganisation.property.adminPassword.displayName=Admin Password
-
+FirstOrganisation.property.adminPassword.isPasswordField=true
