--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
@@ -38,7 +38,7 @@ Database.property.databaseSuffix.displayName=Database Name Suffix
 Database.property.databaseSuffix.shortDescription=No change needed
 Database.property.databaseUserName.displayName=Database User Name
 Database.property.databasePassword.displayName=Database Password
-Database.property.databasePassword.isPasswordField=true
+Database.property.databasePassword.passwordField=true
 Database.property.databaseAdapter.displayName=Database Adapter
 Database.property.databaseAdapter.shortDescription=No change needed
 Database.property.datasourceMetadataTypeMapping.displayName=Data Source Meta Data Type Mapping
@@ -75,7 +75,7 @@ Smtp.property.port.displayName=Port
 Smtp.property.useAuthentication.displayName=Use Authentication
 Smtp.property.username.displayName=Username
 Smtp.property.password.displayName=Password
-Smtp.property.password.isPasswordField=true
+Smtp.property.password.passwordField=true
 Smtp.property.encryptionMethod.displayName=Encryption Method
 Smtp.property.mailFrom.displayName=Sender Address
 
@@ -95,4 +95,4 @@ FirstOrganisation.property.organisationID.shortDescription=Keep empty to not cre
 FirstOrganisation.property.organisationName.displayName=Organisation Name
 FirstOrganisation.property.adminUserName.displayName=Admin Username
 FirstOrganisation.property.adminPassword.displayName=Admin Password
-FirstOrganisation.property.adminPassword.isPasswordField=true
+FirstOrganisation.property.adminPassword.passwordField=true
