* Improved class-loader-handling of config. * Extracted progress, util and i18n from org.nightlabs.base into separate OSGi-bundles.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseBean@17632 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,8 @@
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.query.jdo"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.concurrent"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.config"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.i18n"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.progress"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
