--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.nightlabs.eclipse.sdk.jdo.JDO_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/JFireBaseClientLib"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.progress"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.util"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.i18n"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
