--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,8 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.concurrent"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.config"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.jfire.classloader.remote.backend"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.util"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.i18n"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.progress"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
