Extracted progress, util and i18n from org.nightlabs.base into separate OSGi-bundles.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@17633 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.project
+++ b/.project
@@ -19,6 +19,9 @@
 		<project>JFireRCLBackendBean</project>
 		<project>JFireBaseDAO</project>
 		<project>org.nightlabs.jfire.classloader.remote.backend</project>
+		<project>org.nightlabs.i18n</project>
+		<project>org.nightlabs.progress</project>
+		<project>org.nightlabs.util</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
