experiment: fix cc-build with additional dependency to i18n
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireQueryStore@17992 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.thoughtworks.xstream"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.xmlpull"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.i18n"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
