--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.util"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.i18n"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.progress"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.singleton"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
