added new project org.nightlabs.singleton
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@18654 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.project
+++ b/.project
@@ -22,6 +22,7 @@
 		<project>org.nightlabs.i18n</project>
 		<project>org.nightlabs.progress</project>
 		<project>org.nightlabs.util</project>
+		<project>org.nightlabs.singleton</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
