use org.nightlabs.xml
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireTestSuite@18900 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-4.8.2.jar" sourcepath="lib/junit-4.8.2-src.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.xml"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
