use org.nightlabs.xml
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireServerManager@18900 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.i18n"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.progress"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.singleton"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.xml"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
