--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
 		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 
+	<scm>
+		<connection>scm:svn:https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent</connection>
+		<developerConnection>scm:svn:https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent</developerConnection>
+		<url>https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent</url>
+	</scm>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
