--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,23 @@
 				</excludes>
 			</resource>
 		</resources>
-
-
+		<!-- FIXME the package names should be fixed (?). -->
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.3.4</version>
+				<extensions>true</extensions>
+				<inherited>true</inherited>
+				<configuration>
+					<instructions>
+						<!-- SPECIAL CASE HERE as the bundle name does not correspond to the base package name. -->						
+						<Export-Package>
+							org.nightlabs.jfire.*;version="${project.version}"
+						</Export-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
