--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
-	<!-- @generated - Auto generated POM. Remove this marker after review. -->
-	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nightlabs.jfire</groupId>
 	<artifactId>org.nightlabs.jfire.classloader.remote</artifactId>
@@ -29,6 +27,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.nightlabs</groupId>
+			<artifactId>org.nightlabs.classloader.delegating</artifactId>
+			<scope>provided</scope>
+		</dependency>		
+		<dependency>
 			<groupId>org.nightlabs.jfire</groupId>
 			<artifactId>org.nightlabs.jfire.classloader.remote.backend</artifactId>
 			<scope>provided</scope>
@@ -46,7 +49,5 @@
 				</excludes>
 			</resource>
 		</resources>
-
-
 	</build>
 </project>
