--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,8 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>xerces</groupId>
-			<artifactId>xercesImpl</artifactId>
+			<groupId>org.apache.servicemix.bundles</groupId>
+			<artifactId>org.apache.servicemix.bundles.xerces</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
