added org.nightlabs.xml project to JFireBaseEAR
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@18959 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.project
+++ b/.project
@@ -23,6 +23,7 @@
 		<project>org.nightlabs.progress</project>
 		<project>org.nightlabs.util</project>
 		<project>org.nightlabs.singleton</project>
+		<project>org.nightlabs.xml</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
