--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
 		<artifactId>org.nightlabs.jfire.parent</artifactId>
 		<version>1.2.0-SNAPSHOT</version>
 	</parent>
+
+	<dependencies>
+		<dependency>
+			<groupId>args4j</groupId>
+			<artifactId>args4j</artifactId>
+			<version>2.0.16</version>
+		</dependency>
+	</dependencies>
 	
 	<build>	
 		<plugins>
