Renamed serverupdate projects
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent@18975 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -282,27 +282,12 @@
 			</dependency>
 			<dependency>
 				<groupId>org.nightlabs.jfire</groupId>
-				<artifactId>org.nightlabs.jfire.update.base</artifactId>
+				<artifactId>org.nightlabs.jfire.serverupdate.base</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.nightlabs.jfire</groupId>
-				<artifactId>org.nightlabs.jfire.update.launcher</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.nightlabs.jfire</groupId>
-				<artifactId>org.nightlabs.jfire.update.derby</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.nightlabs.jfire</groupId>
-				<artifactId>org.nightlabs.jfire.update.jboss</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.nightlabs.jfire</groupId>
-				<artifactId>org.nightlabs.jfire.update.mysql</artifactId>
+				<artifactId>org.nightlabs.jfire.serverupdate.launcher</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
