new assemblies for serverupdate.base and launcher
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.serverupdate.launcher@18993 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nightlabs.jfire</groupId>
 	<artifactId>org.nightlabs.jfire.serverupdate.launcher</artifactId>
@@ -22,11 +22,25 @@
 			<version>2.0.16</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.nightlabs</groupId>
+			<artifactId>org.nightlabs.classloader.url</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.nightlabs</groupId>
+			<artifactId>org.nightlabs.util</artifactId>
+			<scope>compile</scope>
+		</dependency>		
+		<dependency>
+			<groupId>org.nightlabs</groupId>
+			<artifactId>org.nightlabs.progress</artifactId>
+			<scope>compile</scope>
+		</dependency>		
 	</dependencies>
-	
-	<build>	
+
+	<build>
 		<plugins>
-<!-- 		
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -35,24 +49,23 @@
 				<inherited>true</inherited>
 				<configuration>
 					<instructions>
-						SPECIAL CASE HERE as the we need to define a main class 
 						<Main-Class>org.nightlabs.jfire.serverupdate.launcher.ServerUpdater</Main-Class>
 					</instructions>
 				</configuration>
 			</plugin>
--->
+
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.2.1</version>
 				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 					<archive>
 						<manifest>
 							<mainClass>org.nightlabs.jfire.serverupdate.launcher.ServerUpdater</mainClass>
 						</manifest>
 					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
 				</configuration>
 				<executions>
 					<execution>
@@ -64,7 +77,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			
 		</plugins>
 	</build>
 </project>
