server manager rar
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent@19024 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,12 @@
 			</dependency>
 			<dependency>
 				<groupId>org.nightlabs.jfire</groupId>
+				<artifactId>org.nightlabs.jfire.servermanager</artifactId>
+				<version>${project.version}</version>
+				<type>rar</type>
+			</dependency>
+			<dependency>
+				<groupId>org.nightlabs.jfire</groupId>
 				<artifactId>org.nightlabs.jfire.simpletrade</artifactId>
 				<version>${project.version}</version>
 			</dependency>
